--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "crud-react",
   "version": "0.1.0",
+  "homepage": "github-page/",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.4",
